[gd_scene load_steps=2 format=3 uid="uid://d1qi5sldm8f5l"]

[ext_resource type="Script" path="res://05_menu/05_menu_script.gd" id="1_pbxuu"]

[node name="05Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pbxuu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Ratcycle"
horizontal_alignment = 2
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TabContainer" type="TabContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tab_alignment = 2
current_tab = 0
clip_tabs = false

[node name="Main_Menu" type="VBoxContainer" parent="CenterContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Button_Start" type="Button" parent="CenterContainer/VBoxContainer/TabContainer/Main_Menu"]
layout_mode = 2
text = "Start Game"
script = ExtResource("1_pbxuu")

[node name="Button_Customize" type="Button" parent="CenterContainer/VBoxContainer/TabContainer/Main_Menu"]
layout_mode = 2
text = "Customize"
script = ExtResource("1_pbxuu")

[node name="Button_Exit" type="Button" parent="CenterContainer/VBoxContainer/TabContainer/Main_Menu"]
layout_mode = 2
text = "Exit Game"
script = ExtResource("1_pbxuu")

[node name="Main_Customization" type="VBoxContainer" parent="CenterContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="CenterContainer/VBoxContainer/TabContainer/Main_Customization"]
layout_mode = 2
text = "Customize Player"
script = ExtResource("1_pbxuu")

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/TabContainer/Main_Customization"]
layout_mode = 2
text = "Back to Menu"
script = ExtResource("1_pbxuu")

[connection signal="button_up" from="CenterContainer/VBoxContainer/TabContainer/Main_Menu/Button_Start" to="." method="f_05_load_level"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/TabContainer/Main_Menu/Button_Customize" to="CenterContainer/VBoxContainer/TabContainer/Main_Menu/Button_Customize" method="f_05_customize_open_tab"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/TabContainer/Main_Menu/Button_Exit" to="." method="f_05_exit_game"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/TabContainer/Main_Customization/Button" to="." method="f_05_customize_back_to_menu"]
